# cc-static-server

./: .gitignore  Cargo.toml  README.md  deploy-config.json  static-server.yaml
src/: lib.rs  main.rs  static_routes.rs
