[package]
name = "cc-static-server"
version = "0.1.2"
edition = "2021"

[dependencies]
cc-server-kit = { git = "https://github.com/markcda/cc-server-kit.git", default-features = false, features = ["utils"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
