[package]
name = "cc-static-server"
version = "0.2.8"
edition = "2024"

[dependencies]
cc-server-kit = { git = "https://github.com/markcda/cc-server-kit.git", tag = "0.3.5", default-features = false, features = ["cc-utils"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
